--- a/.config/touchegg/touchegg.conf
+++ b/.config/touchegg/touchegg.conf
@@ -6,45 +6,6 @@
     <property name="borderColor">auto</property>
   </settings>
   <application name="All">
-    <gesture type="TAP" fingers="2" direction="UNKNOWN">
-      <action type="MOUSE_CLICK">
-        <button>3</button>
-        <on>begin</on>
-      </action>
-    </gesture>
-    <gesture type="TAP" fingers="3" direction="UNKNOWN">
-      <action type="MOUSE_CLICK">
-        <button>2</button>
-        <on>begin</on>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="3" direction="IN">
-      <action type="SEND_KEYS">
-        <modifiers>Super_L</modifiers>
-        <keys>Shift_L+c</keys>
-        <repeat>false</repeat>
-        <animation>NONE</animation>
-        <on>end</on>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="4" direction="OUT">
-      <action type="SEND_KEYS">
-        <modifiers></modifiers>
-        <keys></keys>
-        <repeat>false</repeat>
-        <animation>NONE</animation>
-        <on>begin</on>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="4" direction="IN">
-      <action type="SEND_KEYS">
-        <modifiers>Super_L</modifiers>
-        <keys>d</keys>
-        <repeat>false</repeat>
-        <animation>NONE</animation>
-        <on>end</on>
-      </action>
-    </gesture>
     <gesture type="SWIPE" fingers="3" direction="LEFT">
       <action type="SEND_KEYS">
         <modifiers>Super_L</modifiers>
@@ -81,58 +42,13 @@
         <on>begin</on>
       </action>
     </gesture>
-  </application>
-  <application name="chromium-browser">
-    <gesture type="PINCH" fingers="2" direction="IN">
+    <gesture type="SWIPE" fingers="3" direction="UP">
       <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Control_L</modifiers>
-        <keys>KP_Subtract</keys>
-        <decreaseKeys>KP_Add</decreaseKeys>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="2" direction="OUT">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Control_L</modifiers>
-        <keys>KP_Add</keys>
-        <decreaseKeys>KP_Subtract</decreaseKeys>
-      </action>
-    </gesture>
-  </application>
-  <application name="firefox">
-    <gesture type="PINCH" fingers="2" direction="IN">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Control_L</modifiers>
-        <keys>KP_Subtract</keys>
-        <decreaseKeys>KP_Add</decreaseKeys>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="2" direction="OUT">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Control_L</modifiers>
-        <keys>KP_Add</keys>
-        <decreaseKeys>KP_Subtract</decreaseKeys>
-      </action>
-    </gesture>
-  </application>
-  <application name="google-chrome">
-    <gesture type="PINCH" fingers="2" direction="IN">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Control_L</modifiers>
-        <keys>KP_Subtract</keys>
-        <decreaseKeys>KP_Add</decreaseKeys>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="2" direction="OUT">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Control_L</modifiers>
-        <keys>KP_Add</keys>
-        <decreaseKeys>KP_Subtract</decreaseKeys>
+        <modifiers>Super_L</modifiers>
+        <keys>d</keys>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
       </action>
     </gesture>
   </application>
